--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-cardNumber: (val) => {
-  if (!val || val.trim().length === 0) return "Card number is required";
+expiryDate: (val) => {
+  if (!val || val.trim().length === 0) return "Expiry date is required";
 
-  const cleaned = val.replace(/\s/g, '');
-  if (!/^\d{16}$/.test(cleaned)) return "Card number must be 16 digits";
+  const pattern = /^(0[1-9]|1[0-2])\/([0-9]{2})$/;
+  if (!pattern.test(val)) return "Format must be MM/YY";
 
-  // Luhn Algorithm Check
-  let sum = 0;
-  let shouldDouble = false;
-  for (let i = cleaned.length - 1; i >= 0; i--) {
-    let digit = parseInt(cleaned.charAt(i), 10);
-    if (shouldDouble) {
-      digit *= 2;
-      if (digit > 9) digit -= 9;
-    }
-    sum += digit;
-    shouldDouble = !shouldDouble;
+  const [month, year] = val.split('/');
+  const expiryMonth = parseInt(month, 10);
+  const expiryYear = 2000 + parseInt(year, 10);
+
+  // Expiry date is the *last day* of the given month
+  const expiryDate = new Date(expiryYear, expiryMonth, 0); // day 0 = last day of previous month
+  const now = new Date();
+
+  // Set to end of day for current date (to avoid time issues)
+  now.setHours(0, 0, 0, 0);
+
+  if (expiryDate < now) {
+    return "Card has expired";
   }
-
-  if (sum % 10 !== 0) return "Invalid card number (failed Luhn check)";
 
   return "";
 },
